# dr-write

./: Cargo.toml  Makefile  README.md
asset/: index.html  j1.txt  j2.txt
doi-interface/: Makefile  basic.smithy  codegen.toml  doi-service.smithy
doi-interface/rust/: Cargo.toml
doi-interface/rust/src/: doi.rs  lib.rs
dr-fetch/: Cargo.toml  Makefile  README.md  wasmcloud.toml
dr-fetch/src/: lib.rs
dr-write/: Cargo.toml  wasmcloud.toml
dr-write/asset/: index.html  randword.js  style.css
dr-write/src/: api.rs  lib.rs
dr-write/src/api/: galatic.rs  remote.rs  store.rs
src/api/: remote.rs
