[package]
name = "dr-write"
version = "0.1.0"
authors = [ "KK Lam" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "dr_write"

[dependencies]
anyhow = "1.0"
cookie = "0.17"
futures = "0.3"
form_urlencoded = "1.0"
rand_chacha = "0.3"
rust-embed = "6.6"
mime_guess = "2"
serde = {version = "1.0", features = ["derive"]}
serde_bytes = "0.11"
serde_derive = "1.0"
serde_json = "1.0"
wasmbus-rpc = "0.13"
wasmcloud-interface-httpclient = "0.9"
wasmcloud-interface-httpserver = "0.10"
wasmcloud-interface-keyvalue = "0.10"
wasmcloud-interface-blobstore = "0.6"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
